# nfx-datatypes

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-windows-mingw.yml  build-windows-msvc.yml  codeql.yml  documentation.yml  release.yml
benchmark/: BM_Decimal.cpp  BM_Int128.cpp  CMakeLists.txt  README.md
cmake/: nfx-datatypes-config.cmake.in  nfxDataTypeDependencies.cmake  nfxDataTypeInstall.cmake  nfxDataTypePackaging.cmake  nfxDataTypeSources.cmake  nfxDataTypeTargets.cmake  nfxDataTypeVersion.rc.in  nfxDataTypesBuildConfig.cmake  nfxDataTypesDependencies.cmake  nfxDataTypesInstall.cmake  nfxDataTypesPackaging.cmake  nfxDataTypesSources.cmake  nfxDataTypesTargets.cmake
doc/: CMakeLists.txt
include/nfx/: DataTypes.h
include/nfx/datatypes/: Decimal.h  Int128.h
include/nfx/detail/datatypes/: CompilerSupport.h  Constants.h  Decimal.inl  Int128.inl
samples/: CMakeLists.txt  Sample_Datatypes.cpp
src/: Decimal.cpp  Int128.cpp
test/: CMakeLists.txt  TESTS_Decimal.cpp  TESTS_Int128.cpp  Tests_Decimal.cpp  Tests_Int128.cpp
